namespaces/live.cloud-platform.service.justice.gov.uk/laa-ccw-fees-service-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-ccw-fees-service-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-claim-for-controlled-work-devs"
    cloud-platform.justice.gov.uk/application: "Fees Calculator Service"
    cloud-platform.justice.gov.uk/owner: "Claim for controlled work: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-ccw-fees-service"
    cloud-platform.justice.gov.uk/team-name: "laa-claims-ccw-alpha"
    cloud-platform.justice.gov.uk/review-after: ""
